security_group.tf
/*
  Web Servers
*/
resource "aws_security_group" "cdsg" {
  name = "vpc_web"
  description = "Allow incoming HTTP connections."
 
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = -1
    to_port = -1
    protocol = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # all traffic from internal vpc
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  vpc_id = "${aws_vpc.prod.id}"

  tags {
    Name = "Content Delivery Security Group"
  }
}
/*
  Author Servers
*/
resource "aws_security_group" "casg" {
  name = "vpc_auth"
  description = "Allow internal connections."
 
  # all traffic from internal vpc
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["10.0.0.0/16"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  vpc_id = "${aws_vpc.prod.id}"

  tags {
    Name = "Content Author Security Group"
  }
}
